--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/alexspatrick/REFER-U#readme",
   "dependencies": {
+    "balanced-match": "^1.0.0",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.0.14"
   }
